Refactor to API-based architecture

--- a/TWHelp/TWHelp.csproj
+++ b/TWHelp/TWHelp.csproj
@@ -13,11 +13,17 @@
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
     <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="2.2.0" />
-    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.2.3" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.2.4" />
   </ItemGroup>
 
 
   <ItemGroup>
+    <Folder Include="Areas\Home\Pages\" />
+    <Folder Include="Areas\Profiles\Pages\Users\" />
+    <Folder Include="Areas\Tests\Controllers\" />
+    <Folder Include="Areas\Tests\Data\" />
+    <Folder Include="Areas\Tests\Models\" />
+    <Folder Include="Areas\Tests\Views\" />
     <Folder Include="wwwroot\css\" />
     <Folder Include="wwwroot\images\" />
     <Folder Include="wwwroot\img\" />
