Small UI changes

--- a/ElasticSearch/ElasticSearch.csproj
+++ b/ElasticSearch/ElasticSearch.csproj
@@ -25,4 +25,9 @@
     <PackageReference Include="System.Data.SqlClient" Version="4.7.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Core\Domain.csproj" />
+    <ProjectReference Include="..\Infrastructure\Infrastructure.csproj" />
+  </ItemGroup>
+
 </Project>
