--- a/TWHelp/TWHelp.csproj
+++ b/TWHelp/TWHelp.csproj
@@ -14,6 +14,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
     <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="2.2.0" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.2.4" />
+    <PackageReference Include="Sendgrid" Version="9.12.0" />
   </ItemGroup>
 
 
@@ -21,7 +22,6 @@
     <Folder Include="Areas\Profiles\Pages\Users\" />
     <Folder Include="Areas\Tests\" />
     <Folder Include="Data\" />
-    <Folder Include="Models\" />
     <Folder Include="Pages\" />
     <Folder Include="wwwroot\css\" />
     <Folder Include="wwwroot\images\" />
