Add model prediction as standalone service

--- a/TWHelp/appsettings.json
+++ b/TWHelp/appsettings.json
@@ -23,11 +23,14 @@
       "FacebookLocal": {
         "AppId": 865171437216497,
         "AppSecret": "abd9417483c50b95df8702555d953e83"
-      }
+      },
       //"FacebookServer": {
       //  "AppId": 447284586059503,
       //  "AppSecret": "6c4c0455ca0f688703b36b3c3c9ab1a4"
       //}
+      "EmailSendGrid": {
+        "FirstAPIKey": "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"
+      }
     }
   },
   "Logging": {
