--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,9 @@ services:
   dotnet-test:
     image: dotnet-test:latest
     depends_on:
+      - "python-test"
       - "postgres_image"
+      - "elasticsearch_image"
     build:
       context: .
       dockerfile: Dockerfile
@@ -16,7 +18,17 @@ services:
       - "8000:80"
     networks:
       - twhelp-dev
-  
+
+  python-test:
+    image: python-test:latest
+    build:
+      context: PythonAPI/.
+      dockerfile: Dockerfile
+    ports:
+      - "5000:5000"
+    networks:
+      - twhelp-dev
+
   postgres_image:
     image: postgres:latest
     ports:
@@ -31,5 +43,27 @@ services:
     networks:
       - twhelp-dev
   
+  elasticsearch_image:
+    image: docker.elastic.co/elasticsearch/elasticsearch:5.5.3
+    container_name: elastic
+    environment:
+      - cluster.name=docker-cluster
+      - bootstrap.memory_lock=true
+      - discovery.type=single-node
+      - xpack.security.enabled=false
+      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
+    ulimits:
+      memlock:
+        soft: -1
+        hard: -1
+    volumes:
+      - elasticdata:/usr/share/elasticsearch/data
+    ports:
+      - 9200:9200
+    networks:
+      - twhelp-dev
+  
 volumes:
+  elasticdata:
+    driver: local
   db_volume:
