--- a/TWHelp/TWHelp.csproj
+++ b/TWHelp/TWHelp.csproj
@@ -25,6 +25,7 @@
     <Folder Include="Data\" />
     <Folder Include="Pages\" />
     <Folder Include="wwwroot\css\" />
+    <Folder Include="wwwroot\approveRequests\" />
     <Folder Include="wwwroot\videos\" />
     <Folder Include="wwwroot\output\" />
   </ItemGroup>
